--- a/meiduo/templates/register.html
+++ b/meiduo/templates/register.html
@@ -48,15 +48,15 @@
                         </li>
                         <li>
                             <label>图形验证码:</label>
-                            <input type="text" name="image_code" id="pic_code" class="msg_input">
+                            <input type="text" name="image_code" id="pic_code" class="msg_input" v-model="image_code" @blur="check_image_code">
                             <!-- 在属性前加一个: 表示将变量绑定到属性 -->
                             <img :src="image_code_url" alt="图形验证码" class="pic_code" @click="generate_image_code">
-                            <span class="error_tip">请填写图形验证码</span>
+                            <span class="error_tip" v-show="error_image_code">[[ error_image_code_message ]]</span>
                         </li>
                         <li>
                             <label>短信验证码:</label>
                             <input type="text" name="sms_code" id="msg_code" class="msg_input">
-                            <a href="javascript:;" class="get_msg_code">获取短信验证码</a>
+                            <a @click="send_sms_code" class="get_msg_code" >[[ sms_code_tip ]]</a>
                             <span class="error_tip">请填写短信验证码</span>
                         </li>
                         <li class="agreement">
